--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>福尔摩A璐的个人网站</tltle>
+    <title>福尔摩璐的个人网站</tltle>
   <head>
   <body>
     <hl>欢迎访问我的个人网站<hl>
